objects/Trigger_Event__e.object
<CustomObject>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Object__c</fullName>
        <label>SF Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Record_Id__c</fullName>
        <label>SF Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trigger Event</label>
    <pluralLabel>Trigger Event</pluralLabel>
</CustomObject>